<resources>
    <string name="app_name">Hardware Mate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main">Home</string>
    <string name="build">Build A Pc!</string>
    <string name="board">Boards List</string>
    <string name="cpu">CPU List</string>
    <string name="version">Version Info</string>
    <string name="vga">VGA List</string>
    <string name="about">About</string>


    <string name="app_desc">Search for the hardware you want \nInspect and see the hardware specs\nKeep track about new hardware releases \nAnd much more! \n\n This project uses <a href='www.squareco.co' >Squareco.co</a> APIs.</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>

    <string name="privacypolicy"><a href='https://hardware-mate.flycricket.io/privacy.html' >Privacy Policy</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_client_id">808121914510-lgsta3sm2k2ha0ivp892opoj16o452is.apps.googleusercontent.com</string>



</resources>